[Qt][WK2] Draw tiles of previous contents-scale for opaque layers if they don't intersect with previous tiles https://bugs.webkit.org/show_bug.cgi?id=78962

Only avoid painting old-scale tiles in semi-transparent situtations if the old
tiles intersect with existing tiles.

Reviewed by Kenneth Rohde Christiansen.

* UIProcess/qt/LayerBackingStore.cpp:
(WebKit::LayerBackingStore::paintToTextureMapper):


Canonical link: https://commits.webkit.org/96212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108408 268f45cc-cd09-0410-ab3c-d52691b4dbfc